mejora en jenkins y visualizacion de cobertura de pruebas de sonar